src/test/resources/extension/valid/const/constArrayWriteElem.awsl
begin

const int[] arr = [1,2,3,4];
arr[2] = 0;

println arr[2];

end