src/test/resources/extension/invalid/newtype/unreifiedTypeMain.awsl
begin

A arr = [1];

end